feat: docs for users endpoints
